--- a/templates/index.html
+++ b/templates/index.html
@@ -10,26 +10,25 @@
   body {
     line-height: 1.5;
   }
-  .container {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-  }
 </style>
 {% endblock content %}
 
 {% block content %}
-<header>
-  
-</header>
 <main>
   {% block maintext %}
-  <div class="container">
-    <p itemprop="description">Hello! I'm Thomas. I'm generally known online as MetaTerminal.</p>
-    <p>This is a site for my personal projects and work.</p>
-  </div>
+  <p>The Bravo Awards are a celebration of the hunts, puzzles, and people from the puzzle hunt community.</p>
+  
+  <p>The Third Annual Bravo Awards, which look back over the period between January 12th and December 23rd, 2023, 
+  is currently in its finalist stage. If you'd like to vote on which finalists should receive awards for their 
+  categories, you can do so here:</p>
+
+  <p>LINK</p>
+
+  <p>The awards will be announced in a Twitch livestream on DATE, Eastern Time.</p>
+
+  <p>The Third Annual Bravo Awards were organised by Thomas Gordon, Eugene Chen, and Soni, with help from 
+  Justin Ladia and Liam Thomas.</p>
+
   {% endblock maintext %}
 </main>
 {% endblock content %}
