--- a/sass/base.scss
+++ b/sass/base.scss
@@ -2,8 +2,7 @@ html {
     margin: 0em;
     font-size: 16px;
     line-height: 1.45;
-    background-color: #222;
-    color: white;
+    color: black;
     height: 100%;
     width: 100%;
 }
@@ -12,26 +11,50 @@ tml {
   font-size: 100%; /*16px*/
 }
 
-html, body > nav {
-  background: #222;
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono&display=swap');
+
+body > nav {
+  background-color: #f8f2e0;
+  color: black;
+  font-weight: bold;
 }
 
 body {
-  font-family: sans-serif;
-  font-weight: 100;
+  font-family: 'DM Mono', monospace;
+  font-weight: 130;
   line-height: 1.75;
-  color: #fffaf7;
+  background-color: #faf7ee;
+  color: black;
   margin: 1em;
   display: flex;
   flex-direction: column;
   min-height: calc(100vh - 2em);
 }
 
-p {margin-bottom: 1rem;}
+main {
+  background-color: white;
+  border-radius: 10px;
+  display: block;
+  float: none;
+  margin: auto;
+  margin-top: 40px;
+  max-width: 75em;
+  width: 90%;
+  color: black;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
+
+p {
+  margin-bottom: 1rem;
+  font-weight: 200;
+}
 
 h1, h2, h3, h4, h5 {
   margin: 3rem 0 1.38rem;
-  font-family: 'Hack', monospace;
+  font-family: 'DM Mono', monospace;
   font-weight: 400;
   line-height: 1.3;
 }
@@ -49,8 +72,9 @@ h4 {font-size: 1.563rem;}
 
 h5 {font-size: 1.25rem;}
 
+
 a {
-  color: #ff8a3c;
+  color: blue;
   text-decoration: none;
   outline: 0;
 
@@ -59,17 +83,12 @@ a {
 
 small, .text_small { font-size: 0.8rem; }
 
-main {
-  margin: 0 auto;
-  max-width: 50em;
-}
-
 * {
   box-sizing: content-box;
 }
 
 header, footer, nav, h1, h2, h3, h4, h5, h6 {
-  font-family: 'Hack', monospace;
+  font-family: 'DM Mono', monospace;
 }
 
 #header-sigil {
@@ -78,13 +97,11 @@ header, footer, nav, h1, h2, h3, h4, h5, h6 {
 }
 
 body > header, body > footer {
-  background: #222;
-  color: white;
   text-align: center;
   margin: -1em;
 
   & > a {
-    color: #ff8a3c;
+    color: blue;
     text-decoration: none;
 
     &:hover {
@@ -109,12 +126,8 @@ body > nav {
       margin: 0 3px 0 3px;
 
       & > a {
-        color: #ff8a3c;
+        color: black;
       }
     }
   }
-}
-
-body > footer {
-  margin-top: auto;
 }
