Small name updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head %}
-<meta name="description" content="My stuff.">
+<meta name="description" content="Bravo Awards">
 <style>
   body {
     display: block;
@@ -26,7 +26,7 @@
 
   <p>The awards will be announced in a Twitch livestream on DATE, Eastern Time.</p>
 
-  <p>The Third Annual Bravo Awards were organised by Thomas Gordon, Eugene Chen, and Soni, with help from 
+  <p>The Third Annual Bravo Awards were organised by Thomas Gordon, Eugene C, and Soni (TalesFromTim), with help from 
   Justin Ladia and Liam Thomas.</p>
 
   {% endblock maintext %}
