Styling update for home page

--- a/templates/finalists.html
+++ b/templates/finalists.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+
 {% block header %}
   <h1 class="title">{% if page.extra.display_title %}{{ page.extra.display_title | markdown(inline=true) | safe }}{% else %}{{ page.title }}{% endif %}</h1>
 
@@ -10,5 +11,7 @@
 
 
 {% block content %}
+<div class="content">
 {{ page.content | safe }}
+</div>
 {% endblock %}
