--- a/sass/base.scss
+++ b/sass/base.scss
@@ -31,7 +31,7 @@ body {
   min-height: calc(100vh - 2em);
 }
 
-main {
+.content {
   background-color: white;
   border-radius: 10px;
   display: block;
@@ -41,10 +41,7 @@ main {
   max-width: 75em;
   width: 90%;
   color: black;
-  padding-left: 2%;
-  padding-right: 2%;
-  padding-top: 1%;
-  padding-bottom: 1%;
+  padding: 20px 40px;
 }
 
 p {
@@ -83,10 +80,6 @@ a {
 
 small, .text_small { font-size: 0.8rem; }
 
-* {
-  box-sizing: content-box;
-}
-
 header, footer, nav, h1, h2, h3, h4, h5, h6 {
   font-family: 'DM Mono', monospace;
 }
@@ -124,6 +117,9 @@ body > nav {
     & > li {
       display: inline;
       margin: 0 3px 0 3px;
+	  background-color: white;
+	  padding: 10px 15px;
+	  border: 3px solid black;
 
       & > a {
         color: black;
