--- a/templates/archive.html
+++ b/templates/archive.html
@@ -7,13 +7,7 @@
 {% endblock header %}
 
 {% block content %}
-<ul>
-  {% for page in section.pages %}
-  <li>
-    <a href="{{ page.permalink | safe }}">{% if page.extra.display_title %}{{ page.extra.display_title | markdown(inline=true) | safe }}{% else %}{{ page.title }}{% endif %} ({{ page.date }})</a>
-    <p>{{ page.summary | safe }}</p>
-  </li>
-  {% endfor %}
-</ul>
+<div class="content">
 
+</div>
 {% endblock content %}
