--- a/sass/base.scss
+++ b/sass/base.scss
@@ -14,7 +14,7 @@ tml {
 @import url('https://fonts.googleapis.com/css2?family=DM+Mono&display=swap');
 
 body > nav {
-  background-color: #f8f2e0;
+  background-color: #f4eacd;
   color: black;
   font-weight: bold;
 }
@@ -23,7 +23,7 @@ body {
   font-family: 'DM Mono', monospace;
   font-weight: 130;
   line-height: 1.75;
-  background-color: #faf7ee;
+  background-color: #fcfcef;
   color: black;
   margin: 1em;
   display: flex;
