--- a/sass/base.scss
+++ b/sass/base.scss
@@ -44,6 +44,11 @@ body {
   padding: 20px 40px;
 }
 
+th, td {
+	padding: 5px 10px 0px 10px;
+	text-align: left;
+ }
+
 p {
   margin-bottom: 1rem;
   font-weight: 200;
