--- a/sass/base.scss
+++ b/sass/base.scss
@@ -44,6 +44,18 @@ body {
   padding: 20px 40px;
 }
 
+.width-hack {
+	display: block; 
+	margin: auto; 
+	width: 20%;
+}
+
+.vote-button {
+  	background-color: white; 
+	padding: 0px 15px; 
+	border: 3px solid black;
+}
+
 th, td {
 	padding: 5px 10px 0px 10px;
 	text-align: left;
