--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 <main>
-  <img src="{{ get_url(path='background.jpg') }}" style="width: 500px; display: block; margin: 30px auto 0px auto;">
+  <img src="{{ get_url(path='background.jpg') }}" style="width: 40%; min-width: 300px; display: block; margin: 30px auto 0px auto;">
 
   {% block maintext %}
   <div class="content" style="margin-top: 10px;">
