--- a/sass/base.scss
+++ b/sass/base.scss
@@ -11,6 +11,10 @@ tml {
   font-size: 100%; /*16px*/
 }
 
+* {
+	box-sizing: content-box;
+  }
+
 @import url('https://fonts.googleapis.com/css2?family=DM+Mono&display=swap');
 
 body > nav {
@@ -38,7 +42,7 @@ body {
   float: none;
   margin: auto;
   margin-top: 40px;
-  max-width: 75em;
+  max-width: 75vw;
   width: 90%;
   color: black;
   padding: 20px 40px;
@@ -48,6 +52,7 @@ body {
 	display: block; 
 	margin: auto; 
 	width: 20%;
+	min-width: 100px;
 }
 
 .vote-button {
@@ -82,6 +87,8 @@ td:nth-child(3) {
 p {
   margin-bottom: 1rem;
   font-weight: 200;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5 {
