--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% if page.title %}{{page.title}} | {% endif %}Bravo Awards</title>
+    <title>{% if page.title %}{{page.title}} | {% endif %}Voting for the winners of the Third Annual Bravo Awards is underway.</title>
     <meta name="author" content="Bravo Awards">
     <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="icon" href="{{ get_url(path='favicon.jpg') }}">
