lmao wrong value change

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% if page.title %}{{page.title}} | {% endif %}Voting for the winners of the Third Annual Bravo Awards is underway.</title>
-    <meta name="author" content="Bravo Awards">
+    <title>{% if page.title %}{{page.title}} | {% endif %}Bravo Awards</title>
+    <meta name="author" content="Voting for the winners of the Third Annual Bravo Awards is underway.">
     <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="icon" href="{{ get_url(path='favicon.jpg') }}">
     <link itemprop="url" href="{{ config.base_url }}">
