--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
     <b>Wednesday, January 10th, 9PM Eastern Time</b>.</p>
 
   <p>The Third Annual Bravo Awards were organised by Thomas Gordon (MetaTerminal), Eugene C, and Soni (TalesFromTim), 
-    with help from Justin Ladia and Liam Thomas (junkmail).</p>
+    with organizational help from Justin Ladia and Liam Thomas (junkmail), and web development help from David Millar.</p>
   </div>
   {% endblock maintext %}
 </main>
