Tim suggestions for small fixes; small obituary wording tweaks

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,9 +37,11 @@
     player.setVolume(0.5);
   </script>
 
+  <p>You can also watch the ceremony on Twitch <a href="https://www.twitch.tv/videos/2028985756">here</a>.</p>
 
   <p>The Third Annual Bravo Awards were organised by Thomas Gordon (MetaTerminal), Eugene C, and Soni (TalesFromTim), 
-    with organizational help from Justin Ladia and Liam Thomas (junkmail), and web development help from David Millar.</p>
+    with organizational help from Justin Ladia and Liam Thomas (junkmail), and web development help from David Millar. 
+    This website is hosted and developed by Thomas Gordon (MetaTerminal).</p>
   </div>
   {% endblock maintext %}
 </main>
