Fixing grammar error

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
   <div class="content" style="margin-top: 10px;">
   <p>The Bravo Awards are a celebration of the hunts, puzzles, and people from the puzzle hunt community.</p>
   
-  <p>The Third Annual Bravo Awards, which looks back over 2023, has concluded. You can view the awards ceremony below:</p>
+  <p>The Third Annual Bravo Awards, which look back over 2023, have concluded. You can view the awards ceremony below:</p>
 
   <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
   <div id="twitch" style="text-align: center; padding-top: 20px; padding-bottom: 20px;"></div>
