feat: adjustment for 2024 awards

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     <nav>
       <ul>
         <li><a href="{{ get_url(path='') }}">Home</a></li>
-        <li><a href="{{ get_url(path='@/finalists.md') }}">Finalists</a></li>
+        <li><a href="{{ get_url(path='@/finalists.md') }}">2023 Finalists</a></li>
         <li><a href="{{ get_url(path='@/archive/_index.md') }}">Archive</a></li>
       </ul>
     </nav>
