--- a/templates/index.html
+++ b/templates/index.html
@@ -21,27 +21,11 @@
   <div class="content" style="margin-top: 10px;">
   <p>The Bravo Awards are a celebration of the hunts, puzzles, and people from the puzzle hunt community.</p>
   
-  <p>The Third Annual Bravo Awards, which look back over 2023, have concluded. You can view the awards ceremony below:</p>
-
-  <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
-  <div id="twitch" style="text-align: center; padding-top: 20px; padding-bottom: 20px;"></div>
-  <script type="text/javascript">
-    var options = {
-      width: 854,
-      height: 480,
-      video: "2028985756",
-      // only needed if your site is also embedded on embed.example.com and othersite.example.com
-      parent: ["embed.example.com", "othersite.example.com"]
-    };
-    var player = new Twitch.Player("twitch", options);
-    player.setVolume(0.5);
-  </script>
-
-  <p>You can also watch the ceremony on Twitch <a href="https://www.twitch.tv/videos/2028985756">here</a>.</p>
-
-  <p>The Third Annual Bravo Awards were organised by Thomas Gordon (MetaTerminal), Eugene C, and Soni (TalesFromTim), 
-    with organizational help from Justin Ladia and Liam Thomas (junkmail), and web development help from David Millar. 
-    This website is hosted and developed by Thomas Gordon (MetaTerminal).</p>
+  <p>We are putting together a team to run the Fourth Annual Bravo Awards, which will celebrate the 2024 calendar year!
+    If you'd like to volunteer to help, and potentially change how the awards are run, please fill out 
+    <a href="https://forms.gle/BfjKWBy4D9EScyLk7">this Google form</a> by <u>11:59PM EDT on December 22, 2024</u>.
+  </p>
+  
   </div>
   {% endblock maintext %}
 </main>
