Update for 2024 awards

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,12 @@
   <div class="content" style="margin-top: 10px;">
   <p>The Bravo Awards are a celebration of the hunts, puzzles, and people from the puzzle hunt community.</p>
   
-  <p>We are putting together a team to run the Fourth Annual Bravo Awards, which will celebrate the 2024 calendar year!
-    If you'd like to volunteer to help, and potentially change how the awards are run, please fill out 
-    <a href="https://forms.gle/BfjKWBy4D9EScyLk7">this Google form</a> by <u>11:59PM EDT on December 22, 2024</u>.
+  <p>Currently, the finalists have been selected. 
+    You can vote for which puzzles, rounds, and people should win awards with 
+    <a href="https://forms.gle/HtMCKXVp5XLxeKhN8">this Google form</a>.</p>
+
+  <p>
+    You can view the full list of this year's finalists on <a href="/finalists">the website</a>, or in <a href="https://docs.google.com/spreadsheets/d/1jWkpUbWhi8dpGC7kTSkEiE0V8getkZuPw4Ksi5KhJaw">this document</a>.
   </p>
   
   </div>
