--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,8 @@
     You can view the full list of this year's finalists on <a href="/finalists">the website</a>, or in <a href="https://docs.google.com/spreadsheets/d/1jWkpUbWhi8dpGC7kTSkEiE0V8getkZuPw4Ksi5KhJaw">this document</a>.
   </p>
 
-  <p>The voting closes on <u>January 12, 2025 at 6:59 PM Eastern Time</u>. 
-    There will then be a livestream to announce the winners on <u>January 13, 2025 at 8:00 PM Eastern Time</u>.</p>
+  <p>The voting closes on <u>January 12, 2025 at 11:59 PM UTC</u>. 
+    There will then be a livestream to announce the winners on <u>January 14, 2025 at 1:00 AM UTC</u>.</p>
   
   </div>
   {% endblock maintext %}
