All nominees added

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,8 @@
     <a href="https://forms.gle/HtMCKXVp5XLxeKhN8">this Google form</a>.</p>
 
   <p>
-    You can view the full list of this year's finalists on <a href="/finalists">the website</a>, or in <a href="https://docs.google.com/spreadsheets/d/1jWkpUbWhi8dpGC7kTSkEiE0V8getkZuPw4Ksi5KhJaw">this document</a>.
+    You can view the full list of this year's finalists on <a href="/finalists">the website</a>, or in <a href="https://docs.google.com/spreadsheets/d/1jWkpUbWhi8dpGC7kTSkEiE0V8getkZuPw4Ksi5KhJaw">this document</a>. 
+    If you want to see all puzzles and hunts that were nominated at least once, check out <a href="https://docs.google.com/spreadsheets/d/1jWkpUbWhi8dpGC7kTSkEiE0V8getkZuPw4Ksi5KhJaw/edit?gid=1498330514#gid=1498330514">this sheet</a>!
   </p>
 
   <p>The voting closes on <u>January 12, 2025 at 11:59 PM UTC</u>. 
