--- a/templates/index.html
+++ b/templates/index.html
@@ -21,17 +21,12 @@
   <div class="content" style="margin-top: 10px;">
   <p>The Bravo Awards are a celebration of the hunts, puzzles, and people from the puzzle hunt community.</p>
   
-  <p>Currently, the finalists have been selected. 
+  <p>We are taking nominations for 2025! 
     You can vote for which puzzles, rounds, and people should win awards with 
-    <a href="https://forms.gle/HtMCKXVp5XLxeKhN8">this Google form</a>.</p>
+    <a href="https://forms.gle/WfMEFi8rdLJB1PNo7">this Google form</a>.</p>
 
-  <p>
-    You can view the full list of this year's finalists on <a href="/finalists">the website</a>, or in <a href="https://docs.google.com/spreadsheets/d/1jWkpUbWhi8dpGC7kTSkEiE0V8getkZuPw4Ksi5KhJaw">this document</a>. 
-    If you want to see all puzzles and hunts that were nominated at least once, check out <a href="https://docs.google.com/spreadsheets/d/1jWkpUbWhi8dpGC7kTSkEiE0V8getkZuPw4Ksi5KhJaw/edit?gid=1498330514#gid=1498330514">this sheet</a>!
-  </p>
-
-  <p>The voting closes on <u>January 12, 2025 at 11:59 PM UTC</u>. 
-    There will then be a livestream to announce the winners on <u>January 14, 2025 at 1:00 AM UTC</u>.</p>
+  <p>The voting closes on <u>January 1, 2026</u>. 
+    We will announce the finalists shortly after</u>.</p>
   
   </div>
   {% endblock maintext %}
