Update for 2025 finalists

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,12 +21,12 @@
   <div class="content" style="margin-top: 10px;">
   <p>The Bravo Awards are a celebration of the hunts, puzzles, and people from the puzzle hunt community.</p>
   
-  <p>We are taking nominations for 2025! 
+  <p>We are voting on the finalists for 2025! 
     You can vote for which puzzles, rounds, and people should win awards with 
-    <a href="https://forms.gle/WfMEFi8rdLJB1PNo7">this Google form</a>.</p>
+    <a href="https://forms.gle/wftAjofP29ZYWUbX6">this Google form</a>.</p>
 
-  <p>The voting closes on <u>January 1, 2026</u>. 
-    We will announce the finalists shortly after</u>.</p>
+  <p>The voting closes on <u>January 9, 2026</u>. 
+    We will announce the finalists on January 11, 2026, with exact time and video link provided shortly</u>.</p>
   
   </div>
   {% endblock maintext %}
